mask implementation that does not work